--- a/pyproject.toml
+++ b/pyproject.toml
@@ -38,12 +38,13 @@ cloudpickle = "^2.1.0"
 adlfs = ">=2022.2.0"
 azure-ai-ml = ">=1.2.0"
 azureml-mlflow = { version = ">=1.42.0", optional = true}
-pydantic = "~=2.0"
+pydantic = "~=1.9.1"
 mlflow = {version = "^1.27.0", optional = true}
 backoff = "^2.2.1"
 azure-core = ">=1.26.1"
+azureml-core = "^1.52.0"
 azureml-dataset-runtime = "^1.52.0"
-kedro-datasets = ">=1.0.0"
+kedro-datasets = ">=1.0.0 <2.0.0"
 azureml-fsspec = "^1.1.1"
 
 [tool.poetry.extras]
